--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <script>
             let doIt = () => {
-                inputText = document.getElementById("userType").vvalue;
+                inputText = document.getElementById("userType").value;
                 alert(inputText);
             }
         </script>
