--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <script>
             let doIt = () => {
                 inputText = document.getElementById("userType").value;
-                alert(Number(inputText+1));
+                alert(Number(inputText)+1);
             }
         </script>
     </head>
