--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <script>
             let doIt = () => {
                 inputText = document.getElementById("userType").value;
-                if(inputText > 15) {
+                if(Number(inputText) > 15) {
                     alert("lagguage is exceed")
                 } else {
                     alert("lagguage updated")
