--- a/loop.html
+++ b/loop.html
@@ -3,14 +3,8 @@
         <title>Sum of multiples</title>
     </head>
     <body>
-        <script>
-            let sum =0;
-            for (let i=0; i< 1000; i++) {
-                if( i % 3 === 0 || i % 5 === 0) {
-                    sum += i
-                }
-            }
-            console.log("sum", sum)
+        <script src="script.js">
         </script>
+        <h1>Sum of multiples of 3 or 5 below 10000</h1>
     </body>
 </html>
