--- a/loop.html
+++ b/loop.html
@@ -3,8 +3,9 @@
         <title>Sum of multiples</title>
     </head>
     <body>
-        <script src="script.js">
+        <script src="second.js">
         </script>
+        <script src="first.js"></script>
         <h1>Sum of multiples of 3 or 5 below 10000</h1>
     </body>
 </html>
