--- a/loop.html
+++ b/loop.html
@@ -3,9 +3,13 @@
         <title>Sum of multiples</title>
     </head>
     <body>
-        <script src="second.js">
-        </script>
         <script src="first.js"></script>
+        <script src="second.js"></script>
+        <script src="third.js"></script>
         <h1>Sum of multiples of 3 or 5 below 10000</h1>
+        <input type="number" id="a">
+        <input type="number" id="b">
+        <input type="number" id="n">
+        <button onclick="multipleSum()"></button>
     </body>
 </html>
