--- a/loop.html
+++ b/loop.html
@@ -10,6 +10,6 @@
         <input type="number" id="a">
         <input type="number" id="b">
         <input type="number" id="n">
-        <button onclick="multipleSum()"></button>
+        <button onclick="multipleSum()">Click me</button>
     </body>
 </html>
