--- a/add.html
+++ b/add.html
@@ -1,19 +1,19 @@
 <html>
 <script>
         function calSum(){
-            const a1 = document.getElementById("x1").value;
-            const b1 = document.getElementById("y1").value;
-            const addition = parseInt(a1) + parseInt(b1);
+            const a = document.getElementById("x").value;
+            const b = document.getElementById("y").value;
+            const addition = parseInt(a) + parseInt(b);
            // const sum2=a1+b1;
             document.getElementById("result").innerHTML = "Addition = " + addition;
-            document.getElementById("x1").classList.add("hidden");
-            document.getElementById("y1").classList.add("hidden");
+            document.getElementById("x").classList.add("hidden");
+            document.getElementById("y").classList.add("hidden");
             document.querySelector("button").classList.add("hidden");
         }
 </script>
 <style>
         #result { 
-            font-size: 1.8rem;
+            font-size: 1px;
             color: red;
         }
         .hidden { 
@@ -22,9 +22,9 @@
 </style>
  
     <body>
-<input id="x1" type="number" placeholder="Enter Number"></input>
+<input id="x" type="number" placeholder="Enter Number"></input>
 <br></br>
-<input id="y1" type="number" placeholder="Enter Number"></input>
+<input id="y" type="number" placeholder="Enter Number"></input>
 <br></br>
 <button onclick="calSum()">Calculate Sum</button>
 <div id = "result"></div>
