--- a/add.html
+++ b/add.html
@@ -4,7 +4,7 @@
             const a = document.getElementById("x").value;
             const b = document.getElementById("y").value;
             const addition = parseInt(a) + parseInt(b);
-           // const sum2=a1+b1;
+           // const sum2=a+b;
             document.getElementById("result").innerHTML = "Addition = " + addition;
             document.getElementById("x").classList.add("hidden");
             document.getElementById("y").classList.add("hidden");
