--- a/loop.html
+++ b/loop.html
@@ -6,6 +6,7 @@
         <script src="first.js"></script>
         <script src="second.js"></script>
         <script src="third.js"></script>
+        <script src="arrOne.js"></script>
         <h1>Sum of multiples of 3 or 5 below 10000</h1>
         <input type="number" id="a">
         <input type="number" id="b">
