--- a/arr.html
+++ b/arr.html
@@ -4,5 +4,9 @@
     </head>
     <body>
         <script src="arrOne.js"></script>
+        <input type="number" id="a">
+        <input type="number" id="b">
+        <input type="number" id="l">
+        <button onclick="multipleSum()">Click me</button>
     </body>
 </html>
