--- a/arr.html
+++ b/arr.html
@@ -6,7 +6,7 @@
         <script src="arrOne.js"></script>
         <input type="number" id="a">
         <input type="number" id="b">
-        <input type="number" id="l">
+        <input type="text" id="l"placeholder="Enter numbers separated by commas">
         <button onclick="multipleSum()">Click me</button>
     </body>
 </html>
