--- a/arr.html
+++ b/arr.html
@@ -1,12 +1,12 @@
 <html>
-    <head>
-        <title>Sum of multiples</title>
-    </head>
-    <body>
-        <script src="arrOne.js"></script>
-        <input type="number" id="a">
-        <input type="number" id="b">
-        <input type="text" id="l"placeholder="Enter numbers separated by commas">
-        <button onclick="multipleSum()">Click me</button>
-    </body>
+<head>
+    <title>Sum of multiples</title>
+</head>
+<body>
+    <script src="arrOne.js"></script>
+    <input type="number" id="a" placeholder="Enter a">
+    <input type="number" id="b" placeholder="Enter b">
+    <input type="text" id="l" placeholder="Enter numbers separated by commas">
+    <button onclick="multipleSum()">Click me</button>
+</body>
 </html>
