--- a/arr.html
+++ b/arr.html
@@ -4,6 +4,7 @@
 </head>
 <body>
     <script src="arrOne.js"></script>
+    <script src="arrTwo.js"></script>
     <input type="number" id="a" placeholder="Enter a">
     <input type="number" id="b" placeholder="Enter b">
     <input type="text" id="l" placeholder="Enter numbers separated by commas">
