--- a/arr.html
+++ b/arr.html
@@ -3,7 +3,7 @@
     <title>Sum of multiples</title>
 </head>
 <body>
-    <script src="arrOne.js"></script>
+    <!-- <script src="arrOne.js"></script> -->
     <script src="arrTwo.js"></script>
     <input type="number" id="a" placeholder="Enter a">
     <input type="number" id="b" placeholder="Enter b">
