--- a/arr.html
+++ b/arr.html
@@ -5,8 +5,8 @@
 <body>
     <!-- <script src="arrOne.js"></script> -->
     <script src="arrTwo.js"></script>
-    <input type="number" id="a" placeholder="Enter a">
-    <input type="number" id="b" placeholder="Enter b">
+    <input type="number" id="a1" placeholder="Enter a">
+    <input type="number" id="a2" placeholder="Enter b">
     <input type="text" id="l" placeholder="Enter numbers separated by commas">
     <button onclick="multipleSum()">Click me</button>
 </body>
