--- a/arr.html
+++ b/arr.html
@@ -3,11 +3,11 @@
     <title>Sum of multiples</title>
 </head>
 <body>
-    <!-- <script src="arrOne.js"></script> -->
     <script src="arrOne.js"></script>
+    <!-- <script src="arrOne.js"></script>
     <input type="number" id="a" placeholder="Enter a">
     <input type="number" id="b" placeholder="Enter b">
     <input type="text" id="l" placeholder="Enter numbers separated by commas">
-    <button onclick="multipleSum()">Click me</button>
+    <button onclick="multipleSum()">Click me</button> -->
 </body>
 </html>
